# charger-esp32c6-embassy

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TLS_README.md  TODO.md  ai_guidelines.md  app_config.toml.example  configuration.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: generate_diagrams.yml  rust_ci.yml
architecture/: app_diagram.d2  state_machine.d2
kicad/: #auto_saved_files#  CustomSymbols.bak  CustomSymbols.kicad_sym  DRC.rpt  ERC.rpt  Export3D.kicad_jobset  Exports.kicad_jobset  esp32c6-charger.kicad_pcb  esp32c6-charger.kicad_prl  esp32c6-charger.kicad_pro  esp32c6-charger.kicad_sch  fp-info-cache  zip_gerbers.sh  ~esp32c6-charger.kicad_pcb.lck
kicad/Custom.pretty/: 128x64OLED.kicad_mod  RC522.kicad_mod
kicad/Export/: Plexiglas.dxf  Plexiglas_4+1.dxf  Plexiglas_4+2.dxf  esp32c6-charger.bom.csv
kicad/Export/case/: Bottom.stl  Bushel.stl  Bushels_0.4n_0.2mm_PLA_MINIIS_6m.gcode  ShortBushel.stl  ShortBushel1_0.4n_0.2mm_PLA_MINIIS_18m.gcode  VoltageProtection.stl  bottom_0.4n_0.2mm_PLA_MINIIS_1h2m.gcode
kicad/Export/dxf/: esp32c6-charger-B_Cu.dxf  esp32c6-charger-Edge_Cuts.dxf  esp32c6-charger-F_Cu.dxf
kicad/Export/gerbers/: esp32c6-charger-B_Adhesive.gba  esp32c6-charger-B_Cu.gbl  esp32c6-charger-B_Fab.gbr  esp32c6-charger-B_Mask.gbs  esp32c6-charger-B_Paste.gbp  esp32c6-charger-B_Silkscreen.gbo  esp32c6-charger-Edge_Cuts.gm1  esp32c6-charger-F_Adhesive.gta  esp32c6-charger-F_Cu.gtl  esp32c6-charger-F_Fab.gbr  esp32c6-charger-F_Mask.gts  esp32c6-charger-F_Paste.gtp  esp32c6-charger-F_Silkscreen.gto  esp32c6-charger-job.gbrjob  esp32c6-charger.drl
kicad/Export3D/DrillData/: esp32c6-charger.drl
kicad/Export3D/dxfs/: esp32c6-charger-B_Cu.dxf  esp32c6-charger-Edge_Cuts.dxf  esp32c6-charger-F_Cu.dxf
kicad/Export3D/gerbers/: esp32c6-charger-B_Cu.gbl  esp32c6-charger-B_Mask.gbs  esp32c6-charger-B_Silkscreen.gbo  esp32c6-charger-Edge_Cuts.gm1  esp32c6-charger-F_Cu.gtl  (+3 more)
kicad/gerbers/: esp32c6-charger-B_Cu.gbr  esp32c6-charger-B_Mask.gbr  esp32c6-charger-B_Paste.gbr  esp32c6-charger-B_Silkscreen.gbr  esp32c6-charger-Edge_Cuts.gbr  esp32c6-charger-F_Cu.gbr  esp32c6-charger-F_Mask.gbr  esp32c6-charger-F_Paste.gbr  esp32c6-charger-F_Silkscreen.gbr  esp32c6-charger-NPTH.drl  esp32c6-charger-PTH.drl  esp32c6-charger-job.gbrjob
scripts/: generate_d2_pngs.sh
src/: charger.rs  config.rs  display.rs  embedded_tls_socket.rs  esp32_hardware_rng.rs  lib.rs  messages.rs  mqtt.rs  network.rs  ntp.rs  ocpp.rs  utils.rs
