[package]
edition      = "2021"
name         = "esp32c6-embassy-charged"
rust-version = "1.87"
version      = "0.1.0"

[[bin]]
name = "esp32c6-embassy-charged"
path = "./src/bin/main.rs"

[dependencies]

# no_std alloc for esp
esp-alloc = "0.8.0"

# ESP32-C6 specific dependencies
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32c6",
  "log-04",
  "unstable",
] }
esp-println = { version = "0.15.0", features = ["esp32c6", "log-04", "defmt-espflash"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c6", "log-04"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32c6",
  "log-04",
  "smoltcp",
  "wifi",
] }

# Embassy dependencies
embassy-executor = { version = "0.7.0", features = [
  "log",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["log"] }
embassy-sync = { version = "0.7.0" }
embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }

# Smoltcp network stack dependencies
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  
  "socket-tcp",
  "socket-udp",
] }

# Other dependencies
critical-section = "1.2.0"
log = "0.4.27"
# embedded-io = "0.6.1"
# embedded-io-async = "0.6.1"
# embedded-tls = { git = "https://github.com/drogue-iot/embedded-tls", default-features = false, features = ["alloc"] }
heapless = { version = "0.8.0", default-features = false }
static_cell = "2.1.1"
chrono = { version = "^0.4", default-features = false, features = ["serde", "alloc"] }

# MQTT dependencies
rust-mqtt = { version = "0.3.0", default-features = false }

# OCPP dependencies
ocpp_rs = "0.2.5"

# Display dependencies
ssd1306 = { version = "0.10.0", features = ["graphics"] }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
# tinybmp = "0.6.0"
mfrc522 = "0.8.0"
embedded-hal-bus = "0.3.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
